# LudumDare20

assets/splashscreen/: shadow.eps  splashlogo.psd  splashstars.psd  text.eps
src/: CMakeLists.txt  main.cpp
